Add delta file joining.